Modified LineChart so that chart update happens after render. Fixed dropdowns do that they are scrollable and aligned right.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -86,7 +86,10 @@ div {
 }
 
 
-/*A bootstrap override.*/
-/*.page-header {*/
-    /*margin-top: 0;*/
-/*}*/
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
+
+
